--- a/MvvmTestDemo/App.xaml
+++ b/MvvmTestDemo/App.xaml
@@ -8,6 +8,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <!--<ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CookColors/GreenColor.xaml" />-->
                 <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/DefaultPopularColor.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/DefaultPopularControl.xaml" />
             </ResourceDictionary.MergedDictionaries>
