--- a/MvvmTestDemo/DemoViews/FieldsDemo.xaml
+++ b/MvvmTestDemo/DemoViews/FieldsDemo.xaml
@@ -1,14 +1,14 @@
 ﻿<UserControl x:Class="MvvmTestDemo.DemoViews.FieldsDemo"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml"
-             xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
-             d:DesignHeight="450"
+             d:DesignHeight="850"
              d:DesignWidth="800"
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
@@ -23,8 +23,8 @@
                          Style="{StaticResource DefaultTextBoxStyle}" />
                 <TextBox Width="300" Height="34"
                          BorderThickness="1"
-                         Margin="20,0"
                          IsEnabled="False"
+                         Margin="20,0"
                          Style="{StaticResource AddClearButtonTextBoxStyle}" />
                 <TextBox Width="300" Height="34"
                          BorderThickness="1"
@@ -43,13 +43,23 @@
                          Margin="20,0"
                          Style="{StaticResource ValidationAddClearButtonTextBoxStyle}">
                     <TextBox.Text>
-                        <Binding Mode="TwoWay" Path="TextContent2" UpdateSourceTrigger="PropertyChanged" NotifyOnTargetUpdated="True" NotifyOnValidationError="True">
+                        <Binding Mode="TwoWay" NotifyOnTargetUpdated="True" NotifyOnValidationError="True"
+                                 Path="TextContent2" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
                                 <pt:RegularPatternValidationRule RegularPattern="Chinese" ValidatesOnTargetUpdated="True" />
                             </Binding.ValidationRules>
                         </Binding>
                     </TextBox.Text>
                 </TextBox>
+            </WrapPanel>
+
+            <TextBlock Text="RichTextBox:"
+                       FontSize="20" FontWeight="DemiBold"
+                       Margin="0,0,0,10" />
+            <WrapPanel>
+                <RichTextBox Width="300" Height="300"
+                             BorderThickness="1"
+                             Style="{StaticResource DefaultRichTextBoxStyle}" />
             </WrapPanel>
 
             <TextBlock Text="NumericUpDown:"
@@ -60,35 +70,40 @@
                 <pc:NumericUpDown Width="200" Height="34"
                                   Maximum="20"
                                   Margin="20,0"
-                                  Increment="0.5" IsShowUpDownButton="False"  />
+                                  Increment="0.5" IsShowUpDownButton="False" />
                 <pc:NumericUpDown Width="200" Height="34"
                                   Maximum="10"
                                   Increment="0.5" ValueFormat="F4" />
                 <pc:NumericUpDown Width="200" Height="34"
                                   Margin="0,20"
                                   Style="{StaticResource NumericUpDownAddClearButtonStyle}" />
-                <pc:NumericUpDown x:Name="num5" Width="200" Height="34" Minimum="0"
-                                  Margin="20" ValueChanged="NumericUpDown_ValueChanged"
+                <pc:NumericUpDown x:Name="num5"
+                                  Width="200" Height="34"
+                                  Minimum="0"
+                                  Margin="20"
+                                  ValueChanged="NumericUpDown_ValueChanged"
                                   Style="{StaticResource NumericUpDownAddClearButtonStyle}">
                     <behavior:Interaction.Triggers>
                         <behavior:EventTrigger EventName="ValueChanged">
-                            <behavior:InvokeCommandAction Command="{Binding Sure123Command}" CommandParameter="{Binding ElementName=num5,Path=Value}"/>
+                            <behavior:InvokeCommandAction Command="{Binding Sure123Command}" CommandParameter="{Binding ElementName=num5, Path=Value}" />
                         </behavior:EventTrigger>
                     </behavior:Interaction.Triggers>
                     <pc:NumericUpDown.Value>
-                        <Binding Mode="TwoWay" Path="NumericValue" UpdateSourceTrigger="PropertyChanged" NotifyOnValidationError="True">
+                        <Binding Mode="TwoWay" NotifyOnValidationError="True" Path="NumericValue"
+                                 UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
-                                <pt:RegularPatternValidationRule RegularPattern="NotNegativeInt" ErrorMessage="Please Input Positive Number" ValidatesOnTargetUpdated="True" />
+                                <pt:RegularPatternValidationRule ErrorMessage="Please Input Positive Number" RegularPattern="NotNegativeInt" ValidatesOnTargetUpdated="True" />
                                 <!--<pt:RangeValueValidationRule ErrorMessage="{x:Null}" MaxValue="10" MinValue="-5" ValidatesOnTargetUpdated="True" />-->
                             </Binding.ValidationRules>
                         </Binding>
                     </pc:NumericUpDown.Value>
                 </pc:NumericUpDown>
                 <pc:NumericUpDown Width="200" Height="34"
+                                  IsEnabled="False"
                                   Value="5"
                                   Maximum="10"
                                   ToolTip="ReadOnly"
-                                  IsEnabled="False" IsReadOnly="True" />
+                                  IsReadOnly="True" />
             </WrapPanel>
 
             <TextBlock Text="TextPath:"
@@ -114,6 +129,19 @@
                              pc:TextPath.DrawingRec="0,0,5,5" Stroke="Purple" StrokeThickness="2"
                              Style="{StaticResource FillIconTextPathStyle}" />
             </WrapPanel>
+
+            <TextBlock Text="AutoGroupingText:"
+                       FontSize="20" FontWeight="DemiBold"
+                       Margin="0,30,0,10" />
+            <WrapPanel>
+                <StackPanel Height="200" Orientation="Horizontal">
+                    <pc:AutoGroupingText Text="{Binding AutoText}"
+                                         FontSize="16" FontWeight="Bold"
+                                         HeaderWidth="100" ItemHeight="50" SplitSymbol="&amp;" />
+                    <Button Content="Add Text" Margin="20,0" Click="Button_Click" />
+                </StackPanel>
+            </WrapPanel>
+
         </StackPanel>
     </ScrollViewer>
 
