--- a/MvvmTestDemo/MainWindow.xaml
+++ b/MvvmTestDemo/MainWindow.xaml
@@ -44,10 +44,10 @@
 
     <pc:SideBarWindow.ClientTitleBarAdditionalContent>
         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button ToolTip="主页"
+            <Button Command="{Binding HomePageCommand}"
+                    ToolTip="主页"
                     pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource HomePageGeometry}"
                     pc:FrameworkElementBaseAttached.IconHeight="18" pc:FrameworkElementBaseAttached.IconWidth="18"
-                    Command="{Binding HomePageCommand}"
                     Style="{StaticResource WindowIconButtonStyle}" />
             <ToggleButton x:Name="themeTb"
                           ToolTip="主题"
@@ -58,7 +58,7 @@
     </pc:SideBarWindow.ClientTitleBarAdditionalContent>
 
     <Grid>
-        <Grid Visibility="Visible">
+        <Grid Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
@@ -99,7 +99,7 @@
             </ListBox>
             <ContentControl Grid.Column="1" Content="{Binding ControlContent}" />
         </Grid>
-        <view:PropertyGridDemo Visibility="Collapsed" />
+        <view:ProgressBarDemo Visibility="Visible" />
 
         <!--  接收BubbleMessage的容器  -->
         <ScrollViewer Margin="0,10,10,10"
@@ -150,8 +150,7 @@
                                         <pc:Badge Margin="10,10,0,10" Direction="RightBottom" IsShowBadge="{TemplateBinding IsSelected}">
                                             <pc:Badge.Element>
                                                 <Border Width="16" Height="16"
-                                                        Background="Red"
-                                                        CornerRadius="8">
+                                                        Background="Red" CornerRadius="8">
                                                     <Path Width="12" Height="12"
                                                           Data="{StaticResource CheckGeometry}"
                                                           Fill="White"
